fix(themes): restrict flare overflow for themes (#2873)
* fix(themes): restrict flare overflow for themes

* docs(changeset): fix(themes): restrict flare overflow for themes

--- a/packages/themes/src/presets/bluePlanet.css
+++ b/packages/themes/src/presets/bluePlanet.css
@@ -170,6 +170,7 @@
   height: 100vh;
   background: linear-gradient(#000, var(--scalar-background-1));
   width: 100vw;
+  overflow-x: hidden;
 }
 .light-mode .section-flare {
   display: none;
